@startuml class_diagram
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype polyline
skinparam nodesep 30
skinparam ranksep 70
skinparam dpi 150
skinparam classFontSize 11
skinparam classAttributeFontSize 10
skinparam classBorderColor #555555
skinparam shadowing false
top to bottom direction
title ArenaBook Class Diagram

package "Service / Control Classes" {
    together {
        class AuthService {
            +registerUser(details: dict, role: string): User
            +validateDetails(details: dict): bool
            +loginUser(user: User): void
            +redirectToDashboard(role: string): void
        }

        class FacilityService {
            +searchActiveFacilities(criteria: dict): list
            +submitFacility(managerId: int, details: dict): Facility
            +getPendingFacilities(): list
            +approveFacility(facilityId: int): void
            +rejectFacility(facilityId: int): void
            +getManagerFacilities(managerId: int): list
        }

        class FieldService {
            +createField(facilityId: int, fieldDetails: dict): Field
            +updateField(fieldId: int, fieldDetails: dict): Field
            +getDetails(fieldId: int): Field
        }

        class SlotService {
            +checkSlotAvailability(slotId: int): bool
            +checkSlotConflict(fieldId: int, slotDetails: dict): bool
            +createSlot(fieldId: int, slotDetails: dict): Slot
            +updateSlot(slotId: int, slotDetails: dict): Slot
        }

        class AvailabilityService {
            +getAvailableSlots(fieldId: int, date: date): list
        }
    }

    together {
        class BookingRulesService {
            +getRulesForSlot(slotId: int): BookingRules
            +setBookingRules(facilityId: int, rulesData: dict): BookingRules
            +validateBooking(userId: int, slotId: int): bool
            +validateModification(bookingId: int, newSlotId: int): bool
        }

        class CancellationPolicyService {
            +setCancellationPolicy(facilityId: int, policyData: dict): CancellationPolicy
            +canCancel(bookingId: int): bool
        }

        class TemporaryUnavailabilityService {
            +declareUnavailability(fieldId: int, period: dict): TemporaryUnavailability
            +checkDuplicate(fieldId: int, period: dict): bool
        }

        class BookingService {
            +createPendingBooking(userId: int, slotId: int): Booking
            +validatePendingBooking(bookingId: int): bool
            +confirmBooking(bookingId: int): void
            +modifyBooking(bookingId: int, newSlotId: int): void
            +cancelBooking(bookingId: int): void
            +checkBookingConflict(fieldId: int, period: dict): bool
        }

        class PaymentService {
            +payPendingBooking(bookingId: int, paymentDetails: dict): Payment
            +processMockPayment(bookingId: int, paymentDetails: dict): Payment
            +recordPayment(bookingId: int, amount: decimal): Payment
            +processMockRefund(bookingId: int, refundAmount: decimal): Payment
            +createRefund(bookingId: int, refundAmount: decimal): Payment
        }
    }
}

package "Domain Entities" {
    together {
        class User {
            -id: int
            -username: string
            -email: string
            -role: USER / FACILITY_MANAGER / SYSTEM_ADMIN
            -account_status: string
            +isFacilityManager(): bool
            +isSystemAdmin(): bool
        }

        class Team {
            -id: int
            -name: string
            -representative: User
        }

        class Facility {
            -id: int
            -manager: User
            -name: string
            -location: string
            -description: string
            -status: PENDING / ACTIVE / REJECTED
            +markAsPending(): void
            +approve(): void
            +reject(): void
        }

        class Field {
            -id: int
            -facility: Facility
            -name: string
            -sport_type: string
            -surface_type: string
            +getDetails(): Field
            +update(data: dict): void
        }

        class Slot {
            -id: int
            -field: Field
            -start_datetime: datetime
            -end_datetime: datetime
            +getStatus(): string
            +findAvailable(fieldId: int, date: date): list
            +findOverlapping(fieldId: int, slotDetails: dict): list
        }

        class TemporaryUnavailability {
            -id: int
            -field: Field
            -start_datetime: datetime
            -end_datetime: datetime
            -reason: string
            +create(fieldId: int, period: dict): TemporaryUnavailability
            +findByField(fieldId: int): list
        }
    }

    together {
        class Booking {
            -id: int
            -user: User
            -field: Field
            -slot: Slot
            -status: PENDING / CONFIRMED / CANCELLED
            -created_at: datetime
            -total_cost: decimal
            +getDetails(): Booking
            +markAsPending(): void
            +markAsConfirmed(): void
            +markAsCancelled(): void
            +changeSlot(newSlotId: int): void
            +findOverlapping(fieldId: int, period: dict): list
        }

        class Payment {
            -id: int
            -booking: Booking
            -amount: decimal
            -status: PENDING / SUCCESSFUL / FAILED / REFUND_PENDING / REFUNDED
            -payment_date: datetime
            -payment_type: INITIAL / ADDITIONAL / REFUND
            +recordPayment(): void
            +markAsSuccessful(): void
            +markAsFailed(): void
            +markAsRefunded(): void
        }

        class BookingRules {
            -id: int
            -facility: Facility
            -price_amount: decimal
            -day_type: string
            -start_time: time
            -end_time: time
            -min_notice_hours: int
            -max_duration_minutes: int
            -modification_limit: int
            +getRulesForSlot(slotId: int): BookingRules
            +update(data: dict): void
        }

        class CancellationPolicy {
            -id: int
            -facility: Facility
            -cancellation_deadline_hours: int
            -refund_percentage: int
            +findByFacility(facilityId: int): CancellationPolicy
        }
    }
}

' Domain associations and multiplicities
User "1" -- "0..*" Team : represents
User "1" -- "0..*" Facility : manages
Facility "1" -- "1..*" Field : contains
Facility "1" -- "1" BookingRules : has
Facility "1" -- "1" CancellationPolicy : has
Field "1" -- "0..*" Slot : provides
Field "1" -- "0..*" TemporaryUnavailability : blocks
User "1" -- "0..*" Booking : creates
Booking "1" -- "1" Field : reserves
Booking "1" -- "1" Slot : uses
Booking "1" -- "0..*" Payment : records

' Layout hints for PDF readability
AuthService -[hidden]right- FacilityService
FacilityService -[hidden]right- FieldService
FieldService -[hidden]right- SlotService
SlotService -[hidden]right- AvailabilityService
AvailabilityService -[hidden]down- BookingRulesService

BookingRulesService -[hidden]right- CancellationPolicyService
CancellationPolicyService -[hidden]right- TemporaryUnavailabilityService
TemporaryUnavailabilityService -[hidden]right- BookingService
BookingService -[hidden]right- PaymentService

User -[hidden]right- Team
Team -[hidden]right- Facility
Facility -[hidden]down- Field
Field -[hidden]down- Slot
Slot -[hidden]down- TemporaryUnavailability

Booking -[hidden]down- Payment
BookingRules -[hidden]down- CancellationPolicy
Facility -[hidden]right- BookingRules
BookingRules -[hidden]right- Booking

FacilityService -[hidden]down- Facility
BookingService -[hidden]down- Booking

note right of User
FacilityManager and SystemAdmin are roles of User,
not separate domain classes.
end note

@enduml
